[tool.poetry]
name = "edm"
version = "0.1.0"
description = ""
authors = ["Joqsan Azocar <joqsan.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.3.2"
flake8-builtins = "^2.1.0"
pep8-naming = "^0.13.3"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
